cluster/apps/opnsense/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense-svc
subsets:
  - addresses:
      - ip: 192.168.200.1
    ports:
      - name: http
        port: 80
        protocol: TCP
