cluster/apps/opnsense/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: opnsense
  labels:
    app.kubernetes.io/name: opnsense
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`opnsense.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: opnsense
          namespace: default
      services:
        - name: opnsense-svc
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: opnsense
  labels:
    app.kubernetes.io/name: opnsense
spec:
  ipWhiteList:
    sourceRange:
      - 10.244.0.0/16
      - 10.10.0.0/24
      - 10.8.0.0/24
